feat(): add report controller (missing implementation)
